fix bug #17040 ibase_close again..... User can't close a connection if there are blobs opened. He must close them before to not loose data....